feat: implemented /me endpoint
